propellor (4.5.1) UNRELEASED; urgency=medium

  * Reboot.toKernelNewerThan: If running kernel is new enough, avoid
    looking at what kernels are installed.
    Thanks, Sean Whitton.

 -- Joey Hess <id@joeyh.name>  Sun, 23 Jul 2017 09:41:58 -0400

propellor (4.5.0) unstable; urgency=medium

  * Generalized the PartSpec DSL, so it can be used for both
    disk image partitioning, and disk device partitioning, with
    different partition sizing methods as appropriate for the different
    uses. (minor API change)
  * Propellor.Property.Parted: Added calcPartTable function which uses
    PartSpec DiskPart, and a useDiskSpace combinator.
  * Generate a better description for versioned properties.

 -- Joey Hess <id@joeyh.name>  Fri, 21 Jul 2017 16:40:13 -0400

propellor (4.4.0) unstable; urgency=medium

  * Propellor.Property.Timezone: New module, contributed by Sean Whitton.
  * Propellor.Property.Sudo.enabledFor: Made revertable.
    (minor API change)
  * Propellor.Property.LightDM.autoLogin: Made revertable.
    (minor API change)
  * Propellor.Property.Conffile: Added lacksIniSetting.

 -- Joey Hess <id@joeyh.name>  Mon, 17 Jul 2017 12:55:02 -0400

propellor (4.3.4) unstable; urgency=medium

  * Propellor.Property.Versioned: New module which allows different
    versions of a property or host to be written down in a propellor config
    file. Has many applications, including staged upgrades and rollbacks.
  * LightDM.autoLogin: Use [Seat:*] rather than the old [SeatDefaults].
    The new name has been supported since lightdm 1.15.

 -- Joey Hess <id@joeyh.name>  Sat, 15 Jul 2017 17:22:53 -0400

propellor (4.3.3) unstable; urgency=medium

  * Hosts can be configured to build propellor using stack, by adding
    a property:
        & bootstrapWith (Robustly Stack)
  * Hosts can be configured to build propellor using cabal, but using
    only packages installed from the operating system. This
    will work on eg Debian:
        & bootstrapWith OSOnly